--- a/CTS-E-commerce/src/main/resources/application.properties
+++ b/CTS-E-commerce/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.datasource.driverClassName: com.mysql.cj.jdbc.Driver
-spring.datasource.url: jdbc:mysql://localhost:3306/CTS
+spring.datasource.url: jdbc:mysql://localhost:3306/ECOM
 spring.datasource.username: Sam
 spring.datasource.password: password
 
